--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Danantara777",
+  "name": "danantara777",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -28,6 +28,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "jiti": "^2.6.1",
     "typescript": "^5"
   }
 }
