--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "src/app/hero.ts"
+    "src/app/hero.mts",
+    "eslint.config.mjs"
   ],
   "exclude": ["node_modules"]
 }
